--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,6 +1,10 @@
 spring.application.name=backend
 spring.data.mongodb.uri=mongodb+srv://KavishkaUdara:grants.255@learnbook.itrkpdr.mongodb.net/socialmedia
 spring.data.mongodb.database=learnbook
+server.port=8081
+server.address=0.0.0.0
+server.error.include-message=always
+server.error.include-binding-errors=always
 
 # File upload settings
 spring.servlet.multipart.enabled=true
@@ -19,7 +23,8 @@ spring.security.user.name=user
 spring.security.user.password=password
 
 # CORS settings
-spring.mvc.cors.allowed-origins=http://localhost:3000
-spring.mvc.cors.allowed-methods=GET,POST,PUT,DELETE,OPTIONS
-spring.mvc.cors.allowed-headers=*
-spring.mvc.cors.allow-credentials=true
+spring.web.cors.allowed-origins=http://localhost:3000,http://localhost:3001
+spring.web.cors.allowed-methods=GET,POST,PUT,DELETE,OPTIONS
+spring.web.cors.allowed-headers=*
+spring.web.cors.allow-credentials=true
+spring.web.cors.max-age=3600
