--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -23,7 +23,7 @@ spring.security.user.name=user
 spring.security.user.password=password
 
 # CORS settings
-spring.web.cors.allowed-origins=http://localhost:3000,http://localhost:3001
+spring.web.cors.allowed-origins=http://localhost:3000,http://localhost:3001,http://localhost:3002
 spring.web.cors.allowed-methods=GET,POST,PUT,DELETE,OPTIONS
 spring.web.cors.allowed-headers=*
 spring.web.cors.allow-credentials=true
